        PR target/35483         Based on patches by Laurent Vivier.         * xcoffout.h (DBX_FINISH_STABS): Translate dollar sign to underscore.         * config/rs6000/rs6000-protos.h (rs6000_xcoff_strip_dollar): Declare.         * config/rs6000/xcoff.h (ASM_DECLARE_FUNCTION_NAME): Translate         dollar sign to underscore.         (ASM_OUTPUT_EXTERNAL): Same.         (ASM_OUTPUT_LABELREF): New.         * config/rs6000/rs6000.c (rs6000_xcoff_strip_dollar): New.

* config/rs6000/aix51.h (TARGET_USE_JCR_SECTION): Define.
        * config/rs6000/aix52.h (TARGET_USE_JCR_SECTION): Define.
        * config/rs6000/aix53.h (TARGET_USE_JCR_SECTION): Define.
        * config/rs6000/aix61.h (TARGET_USE_JCR_SECTION): Define.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141134 138bc75d-0d04-0410-961f-82ee72b054a4